--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
+title: Positive Disruption 2021
+logo: /podi/data/figs/logo.png
+description: Draft results for internal analysis
 theme: jekyll-theme-minimal
