--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,12 @@
 title: Positive Disruption 2021
 logo: /podi/data/figs/logo.png
 description: Draft results for internal analysis
-theme: jekyll-theme-minimal
+plugins:
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
+include:
+  -charts.md
+
+theme: jekyll-theme-tactile
