add all regions charts

--- a/_config.yml
+++ b/_config.yml
@@ -11,5 +11,26 @@ include:
   -charts.md
   -/charts/World.md
   -/charts/AdvancedECO.md
+  -/charts/DevelopingECO.md
+  -/charts/OECD.md
+  -/charts/NonOECD.md
+  -/charts/ASEAN.md
+  -/charts/ASIAPAC.md
+  -/charts/EU.md
+  -/charts/EUR.md
+  -/charts/Africa.md
+  -/charts/CSAM.md
+  -/charts/EURASIA.md
+  -/charts/ME.md
+  -/charts/NAM.md
+  -/charts/BRA.md
+  -/charts/USA.md
+  -/charts/CHN.md
+  -/charts/IND.md
+  -/charts/JPN.md
+  -/charts/RUS.md
+  -/charts/RUS.md
+  -/charts/SAFR.md
+  -/charts/Other.md
 
 theme: jekyll-theme-minimal
