--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ include:
   -/charts/EURASIA.md
   -/charts/ME.md
   -/charts/NAM.md
-  -/charts/BRA.md
+  -/charts/BRAZIL.md
   -/charts/USA.md
-  -/charts/CHN.md
-  -/charts/IND.md
+  -/charts/CHINA.md
+  -/charts/INDIA.md
   -/charts/JPN.md
   -/charts/RUS.md
   -/charts/RUS.md
