--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ include:
   -/charts/ME.md
   -/charts/NAM.md
   -/charts/BRAZIL.md
-  -/charts/USA.md
+  -/charts/US.md
   -/charts/CHINA.md
   -/charts/INDIA.md
   -/charts/JPN.md
