--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,115 @@
-# local package
--e .
-
-# external requirements
-flake8
-python-dotenv>=0.5.1
+ansi2html==1.6.0
+appdirs==1.4.3
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==20.3.0
+backcall==0.2.0
+black==20.8b1
+bleach==3.2.1
+Brotli==1.0.9
+CacheControl==0.12.6
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
+click==7.1.2
+colorama==0.4.3
+contextlib2==0.6.0
+cycler==0.10.0
+dash==1.17.0
+dash-core-components==1.13.0
+dash-html-components==1.1.1
+dash-renderer==1.8.3
+dash-table==4.11.0
+decorator==4.4.2
+defusedxml==0.6.0
+diagrams==0.17.0
+distlib==0.3.0
+distro==1.4.0
+entrypoints==0.3
+f90nml==1.2
+ffmpeg==1.4
+flake8==3.8.3
+Flask==1.1.2
+Flask-Compress==1.8.0
+future==0.18.2
+graphviz==0.13.2
+html5lib==1.0.1
+iam-units==2020.4.21
+idna==2.8
+ipaddr==2.2.0
+ipykernel==5.3.4
+ipython==7.18.1
+ipython-genutils==0.2.0
+itsdangerous==1.1.0
+jedi==0.17.2
+Jinja2==2.11.2
+jsonschema==3.2.0
+jupyter-client==6.1.7
+jupyter-core==4.6.3
+jupyter-dash==0.3.1
+jupyterlab-pygments==0.1.2
+kiwisolver==1.2.0
+lockfile==0.12.2
+MarkupSafe==2.0.0a1
+matplotlib==3.3.1
+mccabe==0.6.1
+mistune==0.8.4
+msgpack==0.6.2
+mypy-extensions==0.4.3
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.0.8
+nest-asyncio==1.4.3
+notebook==6.1.5
+numpy==1.19.1
+packaging==20.3
+pandas==1.1.1
+pandas-datapackage-reader==0.17.0
+pandocfilters==1.4.3
+parso==0.7.1
+pathspec==0.8.0
+pep517==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.2.0
+Pint==0.15
+plotly==4.13.0
+progress==1.5
+prometheus-client==0.8.0
+prompt-toolkit==3.0.7
+ptyprocess==0.6.0
+pyam-iamc==0.7.0
+pybind11==2.6.1
+pycodestyle==2.6.0
+pycparser==2.20
+pyflakes==2.2.0
+Pygments==2.6.1
+pyhector==2.4.0.0+10.g593305f
+pymagicc==1.3.2
+pyparsing==2.4.6
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pytoml==0.1.21
+pytz==2020.1
+PyYAML==5.3.1
+pyzmq==19.0.2
+regex==2020.7.14
+requests==2.22.0
+retrying==1.3.3
+scipy==1.5.2
+seaborn==0.11.0rc0
+Send2Trash==1.5.0
+shortcountrynames==0.9.0
+six==1.14.0
+terminado==0.9.1
+testpath==0.4.4
+toml==0.10.1
+tornado==6.0.4
+traitlets==5.0.0
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+urllib3==1.25.8
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+xlrd==1.2.0
