energy demand updates

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Positive Disruption 2021
+title: Positive Disruption
 logo: /docs/logo.png
 description: Draft results for internal analysis
 plugins:
