energy demand updates

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ source = .
 max-line-length = 88
 
 [flake8]
-ignore = B008, E501, W503
+ignore = B008, E501, W503, E203
 max-line-length = 80
 select = B, B950, C, D, E, F, W
 
