--- a/.gitignore
+++ b/.gitignore
@@ -140,5 +140,13 @@ dmypy.json
 
 # Large files
 iamc_data.csv
-output_energy_demand.csv
 IEA/
+energy_demand_baseline.csv
+energy_demand_post_upstream.csv
+energy_demand_post_addtl_eff.csv
+energy_demand_electrified.csv
+energy_demand_subtract_electrified.csv
+energy_demand_reduced_electrified.csv
+energy_demand_post_electrification.csv
+energy_demand_*
+ef_ratios.csv
