--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,11 @@ description: Draft results for internal analysis
 
 plugins:
   - jekyll-relative-links
+  - jekyll-remote-theme
 
 relative_links:
   enabled: true
   collections: true
 
-theme: tactile
+remote_theme: pages-themes/tactile@v0.2.0
+
