--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Positive Disruption
+title: Positive Disruption Draft Results
 
-logo: /docs/logo.png
+logo: docs/logo.png
 
 description: Draft results for internal analysis
 
