--- a/.gitignore
+++ b/.gitignore
@@ -147,3 +147,5 @@ podi/data/energy_demand_post_addtl_eff.csv
 podi/data/energy_demand_post_upstream.csv
 podi/data/energy_demand_reduced_electrified.csv
 podi/data/energy_demand_subtract_electrified.csv
+podi/data/emissions_output.csv
+podi/data/emission_factors.csv
