--- a/.gitignore
+++ b/.gitignore
@@ -140,7 +140,6 @@ dmypy.json
 
 # Large files
 iamc_data.csv
-IEA/
 podi/data/energy_demand_electrified.csv
 podi/data/energy_demand_pathway.csv
 podi/data/energy_demand_post_addtl_eff.csv
@@ -148,6 +147,7 @@ podi/data/energy_demand_post_upstream.csv
 podi/data/energy_demand_reduced_electrified.csv
 podi/data/energy_demand_subtract_electrified.csv
 podi/data/emissions_output.csv
-podi/data/emission_factors.csv
-podi/data/CEDS
-podi/data/EDGAR
+emission_factors.csv
+IEA/
+CEDS
+EDGAR
