--- a/.gitignore
+++ b/.gitignore
@@ -142,6 +142,7 @@ EIA/
 FAO/
 IEA/
 IRENA/
+adoption_curve_models.csv
 iamc_data.csv
 energy_demand_electrified.csv
 energy_demand_pathway.csv
@@ -149,4 +150,9 @@ energy_demand_post_addtl_eff.csv
 energy_demand_post_upstream.csv
 energy_demand_reduced_electrified.csv
 energy_demand_subtract_electrified.csv
+emissions_output.csv
+emissions_output_co2e.csv
+emissions_wedges.csv
 emission_factors.csv
+emissions_energy.csv
+energy_baseline.csv
