output data update

--- a/.gitignore
+++ b/.gitignore
@@ -151,3 +151,4 @@ podi/data/emissions_wedges.csv
 podi/data/energy_baseline.csv
 podi/data/energy_ef_ratios.csv
 podi/data/energy_output.csv
+podi/data/emissions_energy.csv
