--- a/Pipfile
+++ b/Pipfile
@@ -21,7 +21,7 @@ matplotlib = "*"
 pandas = "*"
 scipy = "*"
 xlrd = "*"
-plotly = "==4.8.1"
+plotly = "*"
 black = "*"
 ipykernel = "*"
 pyam-iamc = "*"
