--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,4 @@ podi/data/energy_baseline.csv
 podi/data/energy_ef_ratios.csv
 podi/data/energy_output.csv
 podi/data/emissions_energy.csv
+podi/data/adoption_output.csv
