--- a/.gitignore
+++ b/.gitignore
@@ -151,5 +151,6 @@ podi/data/emissions_wedges.csv
 podi/data/energy_baseline.csv
 podi/data/energy_ef_ratios.csv
 podi/data/energy_output.csv
+podi/data/energy_historical.csv
 podi/data/emissions_energy.csv
 podi/data/adoption_output.csv
