--- a/requirements.txt
+++ b/requirements.txt
@@ -1,164 +1,12 @@
-altair==4.1.0
-ansi2html==1.6.0
-appdirs==1.4.4
-argon2-cffi==20.1.0
-astor==0.8.1
-astroid==2.9.3
-async-generator==1.10
-attrs==20.3.0
-autopep8==1.6.0
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-base58==2.1.0
-black==22.1.0
-bleach==3.2.1
-blinker==1.4
-Brotli==1.0.9
-CacheControl==0.12.6
-cachetools==4.2.0
-certifi==2020.12.5
-cffi==1.14.3
-chardet==4.0.0
-click==8.0.0a1
-colorama==0.4.3
-confuse==1.4.0
-contextlib2==0.6.0
-cycler==0.10.0
-dash==1.17.0
-dash-core-components==1.13.0
-dash-html-components==1.1.1
-dash-renderer==1.8.3
-dash-table==4.11.0
-decorator==4.4.2
-defusedxml==0.6.0
-diagrams==0.18.0
-distlib==0.3.0
-distro==1.4.0
-entrypoints==0.3
-et-xmlfile==1.1.0
-f90nml==1.2
-fair==1.6.3
-ffmpeg==1.4
-flake8==3.8.3
-Flask==1.1.2
-Flask-Compress==1.8.0
-future==0.18.2
-gitdb==4.0.5
-GitPython==3.1.12
-graphviz==0.13.2
-html5lib==1.0.1
-htmlmin==0.1.12
-iam-units==2020.4.21
-idna==2.10
-ImageHash==4.2.0
-ipaddr==2.2.0
-ipykernel==5.4.3
-ipython==7.19.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.0a0
-isort==5.10.1
-itsdangerous==1.1.0
-jedi==0.18.0
-Jinja2==2.11.2
-joblib==1.0.0
-jsonschema==3.2.0
-jupyter-client==6.1.11
-jupyter-core==4.7.0
-jupyter-dash==0.3.1
-jupyterlab-pygments==0.1.2
-kaleido==0.2.1
-kiwisolver==1.3.1
-kneed==0.7.0
-lazy-object-proxy==1.7.1
-llvmlite==0.35.0
-lockfile==0.12.2
-MarkupSafe==2.0.0a1
-matplotlib==3.3.3
-mccabe==0.6.1
-mdutils==1.3.0
-missingno==0.4.2
-mistune==0.8.4
-msgpack==0.6.2
-mypy-extensions==0.4.3
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.3
-networkx==2.5
-notebook==6.1.5
-numba==0.52.0
-numpy==1.20.0rc2
-openpyxl==3.0.7
-packaging==20.8
-pandas==1.2.0
-pandas-datapackage-reader==0.17.0
-pandas-profiling==2.10.0
-pandocfilters==1.4.3
-parso==0.8.1
-pathspec==0.8.1
-pep517==0.8.2
-pexpect==4.8.0
-phik==0.11.0
-pickleshare==0.7.5
-Pillow==8.1.0
-Pint==0.16.1
-platformdirs==2.4.1
-plotly==4.14.3
-progress==1.5
-prometheus-client==0.8.0
-prompt-toolkit==3.0.10
-protobuf==3.14.0
-psutil==5.8.0
-ptyprocess==0.7.0
-pyam-iamc==0.10.0
-pyarrow==2.0.0
-pybind11==2.6.1
-pycodestyle==2.8.0
-pycparser==2.20
-pydeck==0.5.0
-pyflakes==2.2.0
-Pygments==2.7.4
-pyhector==2.4.0.0+10.g593305f
-pylint==2.12.2
-pymagicc==1.3.2
-pyparsing==3.0.0b2
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytoml==0.1.21
-pytz==2020.5
-PyWavelets==1.1.1
-PyYAML==5.4b1
-pyzmq==21.0.0
-regex==2020.11.13
-requests==2.25.1
-retrying==1.3.3
-scikit-learn==0.24.1
-scipy==1.6.0
-seaborn==0.11.1
-Send2Trash==1.5.0
-shortcountrynames==0.9.0
-six==1.15.0
-smmap==3.0.4
-streamlit==0.74.1
-tangled-up-in-unicode==0.0.6
-terminado==0.9.1
-testpath==0.4.4
-threadpoolctl==2.1.0
-toml==0.10.2
-toolz==0.11.1
-tornado==6.1
-tqdm==4.56.0
-traitlets==5.0.5
-typed-ast==1.4.2
-typing-extensions==4.0.1
-tzlocal==3.0b1
-urllib3==1.26.2
-validators==0.18.2
-visions==0.6.0
-watchdog==1.0.2
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==1.0.1
-widgetsnbextension==4.0.0a0
-wrapt==1.13.3
-xlrd==1.2.0
+fair==1.6.4
+globalwarmingpotentials==0.9.3
+mdutils==1.4.0
+numpy==1.23.3
+pandarallel==1.6.3
+pandas==1.5.0
+panel==0.13.1
+plotly==5.10.0
+pyam==0.2.1-alpha
+pyam_iamc==1.5.0
+scipy==1.9.0
+setuptools==59.6.0
