--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-fair==1.6.4
-globalwarmingpotentials==0.9.3
-mdutils==1.4.0
 numpy==1.23.3
-pandarallel==1.6.3
 pandas==1.5.0
-panel==0.13.1
-plotly==5.10.0
-pyam==0.2.1-alpha
-pyam_iamc==1.5.0
 scipy==1.9.0
-setuptools==65.5.1
+pandarallel==1.6.3
+pyam-iamc==1.5.0
+globalwarmingpotentials==0.9.3
+fair==1.6.4
+dash==2.7.0
+dash-bootstrap-components==1.3.1
+
+#mdutils==1.4.0
+#setuptools==65.5.1
+
