--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,5 @@ globalwarmingpotentials==0.9.3
 fair==1.6.4
 dash==2.7.0
 dash-bootstrap-components==1.3.1
-
-#mdutils==1.4.0
-#setuptools==65.5.1
+setuptools==65.5.1
 
