--- a/requirements.txt
+++ b/requirements.txt
@@ -4,23 +4,10 @@
 #
 #    pip-compile --output-file=requirements.txt --resolver=backtracking pyproject.toml
 #
-anyio==3.6.2
-    # via httpcore
-certifi==2022.12.7
-    # via
-    #   httpcore
-    #   httpx
-    #   requests
-charset-normalizer==3.0.1
-    # via requests
 click==8.1.3
     # via flask
-contourpy==1.0.7
-    # via matplotlib
 cramjam==2.6.2
     # via fastparquet
-cycler==0.11.0
-    # via matplotlib
 dash==2.8.1
     # via
     #   dash-bootstrap-components
@@ -33,174 +20,54 @@ dash-html-components==2.0.0
     # via dash
 dash-table==5.0.0
     # via dash
-dill==0.3.6
-    # via pandarallel
-et-xmlfile==1.1.0
-    # via openpyxl
-fair==2.1.0
-    # via positive-disruption (pyproject.toml)
 fastparquet==2023.2.0
     # via positive-disruption (pyproject.toml)
 flask==2.2.3
     # via dash
-fonttools==4.38.0
-    # via matplotlib
 fsspec==2023.1.0
     # via fastparquet
-globalwarmingpotentials==0.9.3
-    # via positive-disruption (pyproject.toml)
-h11==0.14.0
-    # via httpcore
-h2==4.1.0
-    # via httpx
-hpack==4.0.0
-    # via h2
-httpcore==0.16.3
-    # via httpx
-httpx[http2]==0.23.3
-    # via pyam-iamc
-hyperframe==6.0.1
-    # via h2
-iam-units==2022.10.27
-    # via pyam-iamc
-idna==3.4
-    # via
-    #   anyio
-    #   requests
-    #   rfc3986
-importlib-metadata==6.0.0
-    # via pyam-iamc
 itsdangerous==2.1.2
     # via flask
 jinja2==3.1.2
     # via flask
-kiwisolver==1.4.4
-    # via matplotlib
 markupsafe==2.1.2
     # via
     #   jinja2
     #   werkzeug
-matplotlib==3.7.0
-    # via
-    #   fair
-    #   pyam-iamc
-    #   seaborn
 numpy==1.23.3
     # via
-    #   contourpy
-    #   fair
     #   fastparquet
-    #   matplotlib
     #   pandas
     #   positive-disruption (pyproject.toml)
-    #   pyam-iamc
     #   pyarrow
     #   scipy
-    #   seaborn
-    #   wquantiles
-    #   xarray
-openpyxl==3.1.1
-    # via pyam-iamc
 packaging==23.0
-    # via
-    #   fastparquet
-    #   matplotlib
-    #   pint
-    #   pooch
-    #   setuptools-scm
-    #   xarray
-pandarallel==1.6.3
-    # via positive-disruption (pyproject.toml)
+    # via fastparquet
 pandas==1.5.0
     # via
-    #   fair
     #   fastparquet
-    #   pandarallel
     #   positive-disruption (pyproject.toml)
-    #   pyam-iamc
-    #   seaborn
-    #   xarray
 parquet==1.3.1
     # via positive-disruption (pyproject.toml)
-pillow==9.4.0
-    # via matplotlib
-pint==0.18
-    # via
-    #   iam-units
-    #   pyam-iamc
-platformdirs==3.0.0
-    # via pooch
 plotly==5.13.1
     # via dash
 ply==3.11
     # via thriftpy2
-pooch==1.7.0
-    # via fair
-psutil==5.9.4
-    # via pandarallel
-pyam-iamc==1.7.0
-    # via positive-disruption (pyproject.toml)
 pyarrow==11.0.0
     # via positive-disruption (pyproject.toml)
-pyjwt==2.6.0
-    # via pyam-iamc
-pyparsing==3.0.9
-    # via matplotlib
 python-dateutil==2.8.2
-    # via
-    #   matplotlib
-    #   pandas
+    # via pandas
 pytz==2022.7.1
     # via pandas
-pyyaml==6.0
-    # via pyam-iamc
-requests==2.28.2
-    # via
-    #   pooch
-    #   pyam-iamc
-rfc3986[idna2008]==1.5.0
-    # via httpx
 scipy==1.9.0
-    # via
-    #   fair
-    #   positive-disruption (pyproject.toml)
-    #   pyam-iamc
-seaborn==0.12.2
-    # via pyam-iamc
-setuptools-scm==7.1.0
-    # via pyam-iamc
+    # via positive-disruption (pyproject.toml)
 six==1.16.0
     # via
-    #   pyam-iamc
     #   python-dateutil
     #   thriftpy2
-sniffio==1.3.0
-    # via
-    #   anyio
-    #   httpcore
-    #   httpx
 tenacity==8.2.2
     # via plotly
 thriftpy2==0.4.16
     # via parquet
-tomli==2.0.1
-    # via setuptools-scm
-tqdm==4.64.1
-    # via fair
-typing-extensions==4.5.0
-    # via setuptools-scm
-urllib3==1.26.14
-    # via requests
 werkzeug==2.2.3
     # via flask
-wquantiles==0.6
-    # via pyam-iamc
-xarray==2023.2.0
-    # via fair
-xlsxwriter==3.0.8
-    # via pyam-iamc
-zipp==3.15.0
-    # via importlib-metadata
-
-# The following packages are considered to be unsafe in a requirements file:
-# setuptools
